# scrapeRealEstate

./: .gitignore  README.md  conda_env.txt  kleinanzeigen.py  main.py  pyproject.toml
.github/workflows/: smoketest.yml
EDA/: kleinanzeigen_houses_eda.ipynb
config/: Readme.md
data/: 11_04_2025_ads.csv  12_04_2025_ads.csv
kleinanzeigen_scraper/: middlewares.py  scrapy.cfg  settings.py
kleinanzeigen_scraper/kleinanzeigen_scraper/: items.py  pipelines.py  settings.py
kleinanzeigen_scraper/spiders/: houses_kleinanzeigen.py
logs/: Readme.md
scripts/: config_utils.py  convertgps.py  database_operations.py  scrape_houses_kleinanzeigen.py  utils.py
smoketests/: test_content_smoke.py
