[tool.poetry]
name = "scraperealestate"
version = "0.1.0"
description = ""
authors = ["mailmezorro<@gmx.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.25.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.3"
scrapy = "^2.12.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
